assets/css/style.css
body{
    width: 960px;
background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6X746Efllj6LeQZtX7d4q8QIXdPEPGzPZLvBZlGDrxJsllSM');
overflow-x: hidden;
}

.most_back{
    background-color: #ffffff;
    width: 80%;
    height: 960px;
    position: absolute;
    left: 10%;
    top: 200px;
}
.most_back2{
    background-color: #ffffff;
    width: 60%;
    height: 700px;
    position: absolute;
    left: 20%;
    top: 200px;

}
.most_back3{
    background-color: #ffffff;
    width: 60%;
    height: 960px;
    position: absolute;
    left: 20%;
    top: 200px;

}
.imglink1 {

    position: absolute;
    width: 300px;
    height: 250px;
    top: 300px;
    left: 500px;
    font-family: 'Roboto', sans-serif;
    color: #4aaaa5;
    border-style: solid;
    border-color: #4aaaa5;
    border-width: 4px;
    border-radius: 4px;
    text-align: center;
    font-size: 24px;
    
}
.imglink2 {

    position: absolute;
    width: 300px;
    height: 250px;
    top: 600px;
    left: 500px;
    font-family: 'Roboto', sans-serif;
    color: #4aaaa5;
    border-style: solid;
    border-color: #4aaaa5;
    border-width: 4px;
    border-radius: 4px;
    text-align: center;
    font-size: 24px;
    
}


.me_header{
    color:white;
    background-color: #4aaaa5;
    border-color: #4aaaa5;
    border-width: 5px;
    border-style: solid;
    text-align: center;
    padding: 0%;
    margin: 0%;
    font-family: 'Roboto', sans-serif;
    font-size: 30px;
    width: 10%;
    padding: 25px;
    position: absolute;
    left: 20%;
    top: 63px;  
}
.about_me{
    font-family: 'Roboto', sans-serif;
    font-size: 25px;
    position: absolute;
    left:15%;
    top: 180px; 
    text-align: start;
    color: #4aaaa5;
    height: 90px;
    width: 70%;
    border-bottom: #2dafe2;
    border-bottom-width: 3px;
    border-bottom-style: solid;
}
.about_me_contact{
    font-family: 'Roboto', sans-serif;
    font-size: 25px;
    position: absolute;
    left:500px;
    top: 180px; 
    color: #4aaaa5;
    height: 90px;
    width: 900px;
    border-bottom: #2dafe2;
    border-bottom-width: 3px;
    border-bottom-style: solid;
}
.about_me_portfolio{
    font-family: 'Roboto', sans-serif;
    font-size: 25px;
    position: absolute;
    left:25%;
    top: 180px; 
    color: #4aaaa5;
    height: 90px;
    width: 950px;
    border-bottom: #2dafe2;
    border-bottom-width: 3px;
    border-bottom-style: solid;
}
.name{
    width:300px;
    position: absolute;
    left: 500px;
    top: 300px;
    line-height: 10px;
    font-family: 'Roboto', sans-serif;
    color: #4aaaa5;
}
.email {
        width:300px;
        position: absolute;
        left: 500px;
        top: 375px;
        line-height: 10px;
        font-family: 'Roboto', sans-serif;
        color: #4aaaa5;
    
}
.message {
    width:300px;
    position: absolute;
    left: 500px;
    top: 450px;
    line-height: 10px;
    font-family: 'Roboto', sans-serif;
    color: #4aaaa5;

}

.basic_input {
    width: 900px;
    height: 25px;
}

.message_input{
    width: 900px;
    height: 200px;
}
#submit_button  {
    height: 50px;
    width: 150px;
    position: absolute;
    left: 500px;
    top: 700px;
    line-height: 10px;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    text-align: center;
    color: #ffffff;
    background-color: #4aaaa5;

}
.about_me_text{
    position: relative;
    left:8%;
}
.about_me_text2{
    position: relative;
    left:0%;
}
.about_me_text3{
    position: relative;
    left:0;
}
.contact{
    height:20px ;
    position: absolute;
    font-family: 'Roboto', sans-serif;
    top: 50px;
    right: 500px;
    z-index: 12;
    position: absolute;
    top: 130px;
}
.portfolio{
    height:20px ;
    position: absolute;
    font-family: 'Roboto', sans-serif;
    top: 50px;
    right: 400px;
    z-index: 12;
    position: absolute;
    top: 130px;
}
.index{
    height:20px ;
    position: absolute;
    font-family: 'Roboto', sans-serif;
    top: 50px;
    right: 300px;
    z-index: 12;
    position: absolute;
    top: 130px;
}


.headback{

    width: 100%;
    background-color: #ffffff;
    padding: 80px;
    position: absolute;
    top: 0%;
    left: 0;
    z-index: 10;
    border-color: #ffffff;
    border-bottom-color: #4aaaa5;
    border-style: solid;
    border-bottom-width: 3px;
    
}

.abt{
    float: right;
    position: absolute;
    right:7%;
    top:260px;
    width: 50%;
    height: 250px;
    font-family: Arial, Helvetica, sans-serif;
    color: #4aaaa5;
    line-height: 70px;
}

.abt_text{
    position: relative;
    right: 10%;
}
.abt_text2{
    position: absolute;
    left: 15%;
    bottom: 15%;
    width: 70%;
    font-family: Arial, Helvetica, sans-serif;
    color: #4aaaa5;
    line-height: 70px;
}

.pic{
    border-style: solid;
    border-color: #2dafe2;
    border-width: 5px;
    border-radius: 10px;
    height: 250px;
    width: 250px;
    position: absolute;
    left: 18%;
    top: 300px;  
}
.about{
position: absolute;
right: 80px;
top:300px;
}

.copyright{
    position: absolute;
    left: 0;
    bottom: -400px;
    border-width: 5px;
    border-top-color: #4aaaa5;
    padding: 0%;
    text-align: center;
    background-color: #666666;
    width: 100%;
    height: 50px;
    font-family: Arial, Arial, Helvetica, sans-serif;
    color: #ffffff;
}

